--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Category/Index.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Category/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="card-header">
-    <a class="btn btn-info col-md-12 font-weight-bold" asp-action="Create">New Category</a>
+    <a class="btn btn-info col-md-12 font-weight-bold" asp-action="Create" asp-controller="Category">New Category</a>
 </div>
 
 <div class="card-body">
@@ -33,7 +33,7 @@
                         <td>@item.Name</td>
                         <td>
                             <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-edit">&nbsp;</i>Edit</a>
-                            <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-trash">&nbsp;</i>Delete</a>
+                            <a data-toggle="modal" data-target="#deleteModal" class="btn btn-danger btn-sm" asp-action="Delete" data-id="@item.Id"><i class="fa fa-trash">&nbsp;</i>Delete</a>
 
                         </td>
                     </tr>
@@ -43,10 +43,62 @@
     </div>
 </div>
 
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Warning !</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you want delete to this ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                <button id="btnDelete" type="button" class="btn btn-primary">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section JavaScript{
     <script src="~/vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="~/vendor/datatables/dataTables.bootstrap4.min.js"></script>
     <script src="~/js/datatables.js"></script>
+
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $("#deleteModal").on("show.bs.modal", function (event) {
+                let trigger = $(event.relatedTarget);
+                let id = trigger.data("id");
+
+                $("#btnDelete").click(function () {
+
+                    $.ajax({
+                        type: "Get",
+                        url: "./Category/Delete",
+                        data: { id: id },
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8;",
+                        success: function () {
+                            window.location.reload();
+                        },
+                        error: function (error) {
+                            alert(error.statusText);
+                        }
+
+                    });
+                });
+
+            });
+
+        });
+
+
+    </script>
+
 }
 
