subCategories-WithCategories-EagerLoading-Added-Tested

--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -79,8 +79,9 @@
                 <div id="collapseTwo-1" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item"  asp-area="Admin" asp-action="Index" asp-controller="Category">List Categories</a>
-                       
+                        <a class="collapse-item" asp-area="Admin" asp-action="Index" asp-controller="Category">Categories</a>
+                        <a class="collapse-item" asp-area="Admin" asp-action="Index" asp-controller="SubCategory">Sub Categories</a>
+
                     </div>
                 </div>
             </li>
