--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using ErolAksoyResume.Dto.Concrete.CategoryDtos
+﻿@using ErolAksoyResume.Dto.Concrete.CategoryDtos;
+@using ErolAksoyResume.Dto.Concrete.SubCategoryDtos;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
