--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -82,7 +82,7 @@
 
                     $.ajax({
                         type: "Get",
-                        url: "./Category/Delete",
+                        url: "./SubCategory/Delete",
                         data: { id: id },
                         dataType: "json",
                         contentType: "application/json; charset=utf-8;",
