--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/SubCategory/Create.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/SubCategory/Create.cshtml
@@ -1,16 +1,16 @@
-﻿@model CategoryAddDto
+﻿@model SubCategoryAddDto
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row">
-    <p class="col-md-12 font-weight-bold mt-3 mb-3 my-auto">Creating New Category</p>
+    <p class="col-md-12 font-weight-bold mt-3 mb-3 my-auto">Creating New Sub Category</p>
 </div>
 <hr />
 <div class="w-50 mx-auto mt-5 shadow-sm p-5 rounded">
 
-    <form asp-action="Create" asp-controller="Category" method="post">
+    <form asp-action="Create" asp-controller="SubCategory" method="post">
 
         <div class="form-group">
             <label asp-for="@Model.Name"></label>
@@ -19,8 +19,16 @@
             <br />
             <input type="text" class="form-control" asp-for="@Model.Name" />
         </div>
+        <div class="form-group">
 
-        <a asp-action="Index" asp-controller="Category" class="btn btn-warning col-md-5 offset-1">Cancel</a>
+            <label>Base Category</label> &nbsp;
+            <span asp-validation-for="@Model.CategoryId" class="text-danger"></span>
+            <select asp-for="@Model.CategoryId" asp-items="@Model.CategoryList" class="form-control">
+                <option hidden value="-1">-- Select Base Category --</option>
+            </select>
+        </div>
+
+        <a asp-action="Index" asp-controller="SubCategory" class="btn btn-warning col-md-5 offset-1">Cancel</a>
         <button type="submit" class="btn btn-primary col-md-5">Save</button>
     </form>
 </div>
