--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -392,8 +392,9 @@
         </div>
     </div>
 
-    
+
     <!-- Bootstrap core JavaScript-->
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/vendor/jquery/jquery.min.js"></script>
     <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
