--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ErolAksoyResume.Dto.Concrete.CategoryDtos;
 @using ErolAksoyResume.Dto.Concrete.SubCategoryDtos;
+@using ErolAksoyResume.Dto.Concrete.ResumeDtos;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
