--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Resume/Edit.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Resume/Edit.cshtml
@@ -61,7 +61,7 @@
             <div class="position-relative row form-group">
                 <label asp-for="@Model.CategoryId" class="col-sm-2 col-form-label">Sub Category</label>
                 <div class="col-sm-10">
-                    <select id="SubCategoryId" asp-for="@Model.SubCategoryId" asp-items="@(new SelectList(string.Empty,"Id","Name"))" class="form-control">
+                    <select id="SubCategoryId" asp-for="@Model.SubCategoryId" asp-items="@(ViewBag.SubCatList)" class="form-control">
                     </select>
                     <span asp-validation-for="@Model.SubCategoryId" class="text-danger"></span>
                 </div>
