--- a/ErolAksoyResume.MVC.UI/Views/_ViewImports.cshtml
+++ b/ErolAksoyResume.MVC.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ErolAksoyResume.MVC.UI
 @using ErolAksoyResume.MVC.UI.Models
+@using ErolAksoyResume.Dto.Concrete.AppUserDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
