--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ErolAksoyResume.Dto.Concrete.CategoryDtos;
 @using ErolAksoyResume.Dto.Concrete.SubCategoryDtos;
 @using ErolAksoyResume.Dto.Concrete.ResumeDtos;
+@using ErolAksoyResume.Dto.Concrete.AppUserDtos
+@using ErolAksoyResume.Dto.Concrete.SkillDtos; 
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
