skill-operations-completed

--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -107,6 +107,14 @@
                     <span>Resume</span>
                 </a>
             </li>
+            
+
+            <li class="nav-item @(active=="skill"?"active bg-info":"")">
+                <a class="nav-link" asp-action="Index" asp-controller="Skill">
+                    <i class="fas fa-fw fa-book"></i>
+                    <span>Skill</span>
+                </a>
+            </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
