--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Skill/Edit.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Skill/Edit.cshtml
@@ -1,15 +1,16 @@
-﻿@model SkillAddDto
+﻿@model SkillGeneralDto
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
+
 <div class="main-card mb-3 card">
     <div class="card-body">
-        <h5 class="card-title">Creating New Skill</h5>
+        <h5 class="card-title">Editing (@Model.Title) Skill </h5>
         <hr class="dropdown-divider" />
         <br />
-        <form asp-action="Create" asp-controller="Skill" method="post">
+        <form asp-action="Edit" asp-controller="Skill" method="post">
             <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
             <div class="position-relative row form-group">
@@ -31,7 +32,7 @@
             <div class="position-relative row form-group">
                 <label asp-for="@Model.LevelPercent" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
-                    <input placeholder="Level Percent"  pattern="\d*" class="form-control" asp-for="@Model.LevelPercent">
+                    <input placeholder="Level Percent"  oninput="this.value=this.value.replace(/[^0-9]/g,'');" class="form-control" asp-for="@Model.LevelPercent">
                     <span asp-validation-for="@Model.LevelPercent" class="text-danger"></span>
                 </div>
             </div>
@@ -50,7 +51,7 @@
                 <label asp-for="@Model.SubCategoryId" class="col-sm-2 col-form-label">Sub Category</label>
                 <div class="col-sm-10">
                     <span asp-validation-for="@Model.SubCategoryId" class="text-danger"></span>
-                    <select id="SubCategoryId" asp-for="@Model.SubCategoryId" asp-items="@(new SelectList(string.Empty,"Id","Title"))" class="form-control">
+                    <select id="SubCategoryId" asp-for="@Model.SubCategoryId" asp-items="@Model.SubCategoryList" class="form-control">
                     </select>
                 </div>
             </div>
@@ -85,13 +86,12 @@
 
         $(document).ready(function () {
 
-            $("#SubCategoryId").attr("disabled", "disabled");
 
             $("#CategoryId").on("change", function () {
-                $("#SubCategoryId").removeAttr("disabled");
+
                 $listSelect = $("#SubCategoryId");
                 $.ajax({
-                    url: "./GetSubCategories",
+                    url: "../GetSubCategories",
                     data: { id: $("#CategoryId").val() },
                     dataType: "json",
                     type: "GET",
@@ -110,4 +110,3 @@
     </script>
 
 }
-
