portofolio-and-testimonial-crud-completed

--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Portofolio/Edit.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Portofolio/Edit.cshtml
@@ -30,7 +30,7 @@
 
             <div class="position-relative row form-group">
                 <label class="col-sm-2 col-form-label">Active Photo</label>
-                <img src="~/img/portofolio/@Model.ImageUrl" width="400" height="400" />
+                <img src="~/img/portofolio/@Model.ImageUrl" style="width:250px; height:auto;" class="ml-3 img-thumbnail" />
             </div>
 
             <input type="hidden" asp-for="@Model.ImageUrl" />
