--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Testimional/Index.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Testimional/Index.cshtml
@@ -1,13 +1,11 @@
-﻿@model List<PortofolioGeneralDto>
+﻿@model List<TestimionalGeneralDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-
-
 <div class="card-header">
-    <a class="btn btn-info col-md-12 font-weight-bold" asp-action="Create" asp-controller="Portofolio">New Portofolio</a>
+    <a class="btn btn-info col-md-12 font-weight-bold" asp-action="Create" asp-controller="Testimional">New Testimonial</a>
 </div>
 
 <div class="card-body">
@@ -15,21 +13,22 @@
         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <thead>
                 <tr class="table-info">
+                    <th>Name</th>
                     <th>Title</th>
                     <th>Text</th>
                     <th>Image</th>
-                    <th>Sub Category</th>
+                    <th>Draft</th>
                     <th>Panel</th>
                 </tr>
             </thead>
 
             <tfoot class="table-info">
                 <tr>
-
+                    <th>Name</th>
                     <th>Title</th>
                     <th>Text</th>
                     <th>Image</th>
-                    <th>Sub Category</th>
+                    <th>Draft</th>
                     <th>Panel</th>
                 </tr>
             </tfoot>
@@ -38,10 +37,20 @@
                 @foreach (var item in Model)
                 {
                     <tr>
+                        <td>@item.Name</td>
                         <td>@item.Title</td>
                         <td>@Html.Raw(@item.Text)</td>
-                        <td><img src="~/img/portofolio/@item.ImageUrl" style="width:150px; height:auto;" class="img-thumbnail" /></td>
-                        <td>@item.SubCategory.Name</td>
+                        <td><img src="~/img/testimonial/@item.ImageUrl" style="width:150px; height:auto;" class="img-thumbnail" /></td>
+                        <td>
+                            @if (item.IsDraft == true)
+                            {
+                                <input class="form-check" type="checkbox" checked disabled>
+                            }
+                            else
+                            {
+                                <input class="form-check" type="checkbox" disabled>
+                            }
+                        </td>
                         <td>
                             <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-edit">&nbsp;</i>Edit</a>
                             <a data-toggle="modal" data-target="#deleteModal" class="btn btn-danger btn-sm" asp-action="Delete" data-id="@item.Id"><i class="fa fa-trash">&nbsp;</i>Delete</a>
@@ -90,7 +99,7 @@
 
                     $.ajax({
                         type: "Get",
-                        url: "./Portofolio/Delete",
+                        url: "./Testimional/Delete",
                         data: { id: id },
                         dataType: "json",
                         contentType: "application/json; charset=utf-8;",
