--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using ErolAksoyResume.Dto.Concrete.AppUserDtos
 @using ErolAksoyResume.Dto.Concrete.SkillDtos; 
 @using ErolAksoyResume.Dto.Concrete.PortofolioDtos;
+@using ErolAksoyResume.Dto.Concrete.TestimionalDtos; 
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
