Service-operations-completed

--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using ErolAksoyResume.Dto.Concrete.SkillDtos; 
 @using ErolAksoyResume.Dto.Concrete.PortofolioDtos;
 @using ErolAksoyResume.Dto.Concrete.TestimionalDtos; 
+@using ErolAksoyResume.Dto.Concrete.ServiceDtos; 
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
