--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -130,6 +130,13 @@
                 </a>
             </li>
 
+            <li class="nav-item @(active=="service"?"active bg-info":"")">
+                <a class="nav-link" asp-action="Index" asp-controller="Service">
+                    <i class="fas fa-fw fa-shopping-bag"></i>
+                    <span>Service</span>
+                </a>
+            </li>
+
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
