--- a/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ErolAksoyResume.MVC.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using ErolAksoyResume.Dto.Concrete.PortofolioDtos;
 @using ErolAksoyResume.Dto.Concrete.TestimionalDtos; 
 @using ErolAksoyResume.Dto.Concrete.ServiceDtos; 
+@using ErolAksoyResume.Dto.Concrete.BlogDtos;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
