--- a/ErolAksoyResume.MVC.UI/Views/Shared/_Layout.cshtml
+++ b/ErolAksoyResume.MVC.UI/Views/Shared/_Layout.cshtml
@@ -93,10 +93,10 @@
                                 <div class="col-md-8 col-sm-8 col-xs-4">
                                     <ul class="tabs">
                                         <li class="tab">
-                                            <a class="home-btn" asp-action="Index" ><i class="fa fa-home" aria-hidden="true"></i></a>
+                                            <a class="home-btn" asp-action="Index"><i class="fa fa-home" aria-hidden="true"></i></a>
                                         </li>
                                         <li class="tab"><a asp-action="Resume">RESUME</a></li>
-                                        <li class="tab"><a href="#portfolio">PORTFOLIO</a></li>
+                                        <li class="tab"><a asp-action="Portofolio">PORTFOLIO</a></li>
                                         <li class="tab"><a href="#blog">BLOG</a></li>
                                         <li class="tab"><a href="#contact">CONTACT</a></li>
                                     </ul>
