blog-operations-completed

--- a/ErolAksoyResume.MVC.UI/Views/Home/Index.cshtml
+++ b/ErolAksoyResume.MVC.UI/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                             <div class="col-md-3 col-sm-6 col-xs-12">
                                 <div class="service">
                                     <div class="icon">
-                                        <i class="flaticon-html"></i>
+                                        <i class="fa fa-4x fa-code" ></i>
                                     </div>
                                     <span class="title">@service.Title</span>
                                     <p class="little-text">@service.Text</p>
