--- a/ErolAksoyResume.MVC.UI/Views/Shared/_Layout.cshtml
+++ b/ErolAksoyResume.MVC.UI/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                                         </li>
                                         <li class="tab"><a asp-action="Resume">RESUME</a></li>
                                         <li class="tab"><a asp-action="Portofolio">PORTFOLIO</a></li>
-                                        <li class="tab"><a href="#blog">BLOG</a></li>
+                                        <li class="tab"><a asp-action="Blog" asp-route-id="">BLOG</a></li>
                                         <li class="tab"><a href="#contact">CONTACT</a></li>
                                     </ul>
                                 </div>
